[gd_scene load_steps=10 format=3 uid="uid://d010nnb4m6alq"]

[ext_resource type="Script" path="res://mob.gd" id="1_0xu3l"]
[ext_resource type="Texture2D" uid="uid://baycco6t406fs" path="res://DeathSlimeIdleSide.png" id="2_ls6ny"]
[ext_resource type="Texture2D" uid="uid://dg4jgtimfmg44" path="res://energy_shield.png" id="3_s3rva"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qf2m1"]

[sub_resource type="Animation" id="Animation_gdehk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_f0khm"]
resource_name = "stay_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0hgd1"]
_data = {
"RESET": SubResource("Animation_gdehk"),
"stay_down": SubResource("Animation_f0khm")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tfmtv"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wtmw0"]
radius = 30.0

[node name="Slime" type="CharacterBody2D"]
scale = Vector2(0.1, 0.1)
script = ExtResource("1_0xu3l")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ls6ny")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(0.7, 0.7)
shape = SubResource("CircleShape2D_qf2m1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0hgd1")
}

[node name="area_folow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_folow"]
shape = SubResource("CircleShape2D_tfmtv")

[node name="Area_Shield" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Shield"]
shape = SubResource("CircleShape2D_wtmw0")

[node name="Sprite2D" type="Sprite2D" parent="Area_Shield"]
visible = false
scale = Vector2(0.14, 0.14)
texture = ExtResource("3_s3rva")

[connection signal="body_entered" from="area_folow" to="." method="_on_area_folow_body_entered"]
[connection signal="body_exited" from="area_folow" to="." method="_on_area_folow_body_exited"]
[connection signal="body_entered" from="Area_Shield" to="." method="_on_area_shield_body_entered"]
[connection signal="body_exited" from="Area_Shield" to="." method="_on_area_shield_body_exited"]
